namespace CRM.Domain.Shared.Enums;

public enum UserRole
{
    Admin = 1,
    Sales = 2,
    EnterpriseUser = 3,
    CustomerUser = 4
}
